<resources>
    <string name="app_name" translatable="false">PersonalForm</string>
    <string name="showing_app_name" translatable="false">Personal Form</string>
    <string name="tv_showing_info">Showing your info</string>
    <string name="tv_name">Name</string>
    <string name="tv_birthday">Date of birth</string>
    <string name="tv_an">Account Number</string>
    <string name="tv_email" translatable="false">Email</string>
    <string name="btn_show_info">Show info</string>
    <string name="btn_return">Return</string>
    <string name="app_version">Version 1.0</string>
    <string name="tv_show_age">Your age</string>
    <string name="tv_zodiac_sign">Zodiac Sign</string>
    <string name="tv_chinese_horoscope">Chinese Horoscope</string>
    <string name="tv_result_name">Name: %s</string>
    <string name="tv_result_age">Age: %d</string>
    <string name="tv_result_an">AN: %s</string>
    <string name="tv_result_email" translatable="false">Email: %s</string>
    <string name="tv_result_birthday">Date of birth: %s</string>
    <string name="ma_date_of_birth" translatable="false">%1d / %2d / %3d</string>
    <string name="toast_required_values">You should fill all the values :(</string>
    <string name="name_required">Your name is required!</string>
    <string name="birthday_required">Your date of birth is required!</string>
    <string name="an_required">Your account number is required!</string>
    <string name="an_invalid_length">Account number must have at least 9 digits</string>
    <string name="email_required">Your email is required!</string>
    <string name="not_valid_email">Not valid email!</string>
    <string name="rat_chinese_horoscope">Rat</string>
    <string name="ox_chinese_horoscope">Ox</string>
    <string name="tiger_chinese_horoscope">Tiger</string>
    <string name="rabbit_chinese_horoscope">Rabbit</string>
    <string name="dragon_chinese_horoscope">Dragon</string>
    <string name="snake_chinese_horoscope">Snake</string>
    <string name="horse_chinese_horoscope">Horse</string>
    <string name="goat_chinese_horoscope">Goat</string>
    <string name="monkey_chinese_horoscope">Monkey</string>
    <string name="rooster_chinese_horoscope">Rooster</string>
    <string name="dog_chinese_horoscope">Dog</string>
    <string name="pig_chinese_horoscope">Pig</string>
    <string name="aquarius">Aquarius</string>
    <string name="aries">Aries</string>
    <string name="cancer">Cancer</string>
    <string name="capricorn">Capricorn</string>
    <string name="gemini">Gemini</string>
    <string name="leo">Leo</string>
    <string name="libra">Libra</string>
    <string name="pisces">Pisces</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="scorpio">Scorpio</string>
    <string name="taurus">Taurus</string>
    <string name="virgo">Virgo</string>
</resources>